--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "ToggleableNightVision",
-  "description": "Toggleable night vision in the bunker.",
-  "version_number": "1.1.3",
+  "description": "Toggleable night vision inside and outside the facility.",
+  "version_number": "2.0.0",
   "dependencies": [ "BepInEx-BepInExPack-5.4.2100" ],
   "website_url": "https://github.com/kennyhngo/LethalCompany-NightVision"
 }
